# continuum

./: .dockerignore  .gitignore  Dockerfile.privacy-test  LICENSE.txt  README.md  biome.json  bts.jsonc  lefthook.yml  package.json  playwright.config.ts  turbo.json  vitest.config.ts
.github/workflows/: ci.yml  privacy-gate.yml  tauri-desktop-build.yml  tauri-ipc-tests.yml
.husky/: pre-commit
apps/fumadocs/: package.json
apps/web/: .env.example  alchemy.run.ts  components.json  next.config.ts  package.json  tsconfig.json  vitest.setup.ts
apps/web/docs/: tauri-desktop-build-fixes.md
apps/web/scripts/: build-desktop.mjs  build-desktop.ps1  build-desktop.sh
apps/web/src/: index.css
apps/web/src-tauri/: Cargo.toml  build.rs  deny.toml  rustfmt.toml  tauri.conf.json
apps/web/src-tauri/.cargo/: config.toml
apps/web/src-tauri/capabilities/: default.json
apps/web/src-tauri/src/: lib.rs  main.rs
apps/web/src-tauri/src/downloads/: commands.rs  manager.rs  mod.rs  state.rs
apps/web/src-tauri/src/hardware/: commands.rs  mod.rs  state.rs
apps/web/src-tauri/src/inference/: commands.rs  mod.rs  state.rs
apps/web/src-tauri/src/verification/: commands.rs  mod.rs  tests.rs
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/chat/: page.tsx
apps/web/src/app/dashboard/: dashboard.tsx  page.tsx
apps/web/src/app/models/: page-content.tsx  page.tsx
apps/web/src/components/: error-boundary.tsx  header.tsx  loader.tsx  mode-toggle.tsx  providers.tsx  user-menu.tsx
apps/web/src/components/features/chat/: abort-button.tsx  chat-layout.tsx  chat-model-selector.tsx  chat-panel.tsx  inference-error.tsx  message-input.tsx  (+4 more)
apps/web/src/components/ui/: button.tsx  checkbox.tsx  dialog.tsx  dropdown-menu.tsx  label.tsx  select.tsx  skeleton.tsx
apps/web/src/hooks/: use-auto-save.ts  use-context-health.ts  use-corruption-dialog.ts  use-download-completion.ts  use-download-progress-subscription.ts  use-model-download.ts  use-model-switch.ts  use-network-recovery.ts  use-session-recovery.ts  use-summarization.ts
apps/web/src/hooks/__tests__/: use-auto-save.test.ts  use-context-health.test.ts  use-download-completion.test.ts  use-download-progress-subscription.test.ts  use-is-desktop.test.tsx  use-model-download.test.ts  use-model-switch.test.ts  use-network-recovery.test.ts  use-session-recovery.test.ts  use-summarization.test.ts
apps/web/src/lib/: auth-client.ts  format-relative-time.ts  notifications.ts
apps/web/src/lib/__tests__/: notifications.test.ts
apps/web/src/lib/context/: context-health.ts  count-tokens.ts  index.ts  summarize.ts
apps/web/src/lib/inference/: auto-select-model.ts  get-adapter.ts
apps/web/src/lib/sessions/: download-file.ts  export-session.ts  filter-sessions.ts
apps/web/src/stores/: downloads.ts  hardware.ts  models.ts  persist.ts  privacy.ts  session.ts
apps/web/src/stores/__tests__/: downloads.test.ts  hardware.test.ts  models.test.ts  privacy-log.test.ts  session-persist.test.ts  session-summarization.test.ts
apps/web/src/types/: inference.ts
apps/web/src/utils/: trpc.ts
apps/web/tests/e2e/: smoke.spec.ts
docs/: development.md
tests/: sanity.test.ts
tests/fixtures/: factories.test.ts  factories.ts
tests/privacy-gate/: network-isolation.spec.ts  privacy-store.test.ts
tests/unit/: privacy-keyboard-shortcuts.test.ts  session-store.test.ts
(+89 files in other folders)
