[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.92.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[features]
default = ["language"]
language = []
cuda = ["kalosm/cuda"]

[dependencies]
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-mcp-bridge = "0.6"
tauri-plugin-notification = "2"

# Inference dependencies
kalosm = { version = "0.4", features = ["language"] }
tokio = { version = "1", features = ["full", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

# Hardware detection (Story 2.1)
sysinfo = "0.37.2"

# Download manager (Story 2.3)
reqwest = { version = "0.12", features = ["stream"] }
uuid = { version = "1.11", features = ["v4"] }

# Integrity verification (Story 2.5)
sha2 = "0.10"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
